--- a/Statistics_for_Categorical_Variables_and_Data_Transformation_I.ipynb
+++ b/Statistics_for_Categorical_Variables_and_Data_Transformation_I.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxp9YwmsPPp67TP4c5vRma",
+      "authorship_tag": "ABX9TyN9XUCUnG9b53ckSsKOBVMx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 54,
       "metadata": {
         "id": "fzYBTMFeO_h2"
       },
@@ -53,9 +53,9 @@
           "height": 504
         },
         "id": "w4cHns7vPjm5",
-        "outputId": "0adc7231-fd0a-4383-8222-6045029d3097"
+        "outputId": "d81f8119-ab52-4c6b-af93-28bc5a0a5f69"
       },
-      "execution_count": 9,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -84,7 +84,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b42a0ef3-4602-48b9-ad24-f308b623b7e9\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f78c69a3-8576-49c1-bc34-96e33077d857\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -199,7 +199,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b42a0ef3-4602-48b9-ad24-f308b623b7e9')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f78c69a3-8576-49c1-bc34-96e33077d857')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -251,12 +251,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b42a0ef3-4602-48b9-ad24-f308b623b7e9 button.colab-df-convert');\n",
+              "        document.querySelector('#df-f78c69a3-8576-49c1-bc34-96e33077d857 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b42a0ef3-4602-48b9-ad24-f308b623b7e9');\n",
+              "        const element = document.querySelector('#df-f78c69a3-8576-49c1-bc34-96e33077d857');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -276,8 +276,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-70f542b8-fb0c-49c3-9d6f-5be2f76c9888\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-70f542b8-fb0c-49c3-9d6f-5be2f76c9888')\"\n",
+              "    <div id=\"df-b1869d34-6a2a-46c1-ab91-d2f40b246142\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b1869d34-6a2a-46c1-ab91-d2f40b246142')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -396,7 +396,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-70f542b8-fb0c-49c3-9d6f-5be2f76c9888 button');\n",
+              "            document.querySelector('#df-b1869d34-6a2a-46c1-ab91-d2f40b246142 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -413,7 +413,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 55
         }
       ]
     },
@@ -428,9 +428,9 @@
           "height": 460
         },
         "id": "tw4VJGYqP4lc",
-        "outputId": "b04808c2-7084-40d2-a689-243de564f709"
+        "outputId": "26a6c13c-cc7f-42c3-81da-66e53d6e90a2"
       },
-      "execution_count": 10,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -527,7 +527,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 56
         }
       ]
     },
@@ -543,9 +543,9 @@
           "height": 460
         },
         "id": "FhW7w9jsQFSi",
-        "outputId": "0300da5d-64b0-4828-9563-7ef3822c47f9"
+        "outputId": "67e7d394-124c-4bbb-c3ae-6cc93c822d1b"
       },
-      "execution_count": 11,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -642,7 +642,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 57
         }
       ]
     },
@@ -655,6 +655,360 @@
       "metadata": {
         "id": "3qcLkN4sQfUo"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nom_cd=['Name','Ticket','Cabin']#nominal categorical data-no order\n",
+        "ord_cd=['Embarked','Gender']#ordinal categorical data-follow a particular order"
+      ],
+      "metadata": {
+        "id": "iw09oSSzRzWx"
+      },
+      "execution_count": 58,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#find the number of values for gender\n",
+        "data['Gender'].value_counts()\n",
+        "gender_categories=['Female','Male']\n",
+        "#order the categories\n",
+        "data['Gender']=pd.Categorical(data['Gender'],categories=gender_categories,ordered=True)\n",
+        "#display the new ordered gender column\n",
+        "data['Gender']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 458
+        },
+        "id": "WWn6odqpScTk",
+        "outputId": "96ddd53d-da4f-4339-a8d2-0da28261a625"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0      NaN\n",
+              "1      NaN\n",
+              "2      NaN\n",
+              "3      NaN\n",
+              "4      NaN\n",
+              "      ... \n",
+              "190    NaN\n",
+              "191    NaN\n",
+              "192    NaN\n",
+              "193    NaN\n",
+              "194    NaN\n",
+              "Name: Gender, Length: 195, dtype: category\n",
+              "Categories (2, object): ['Female' < 'Male']"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Gender</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>190</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>191</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>192</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>193</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>194</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>195 rows × 1 columns</p>\n",
+              "</div><br><label><b>dtype:</b> category</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#convert gender from categorical to numerical\n",
+        "data['Gender']=data['Gender'].cat.codes\n",
+        "data['Gender']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 458
+        },
+        "id": "Jfccf2DmVuun",
+        "outputId": "dfc8e587-637c-4075-aca5-fcf54534d90f"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0     -1\n",
+              "1     -1\n",
+              "2     -1\n",
+              "3     -1\n",
+              "4     -1\n",
+              "      ..\n",
+              "190   -1\n",
+              "191   -1\n",
+              "192   -1\n",
+              "193   -1\n",
+              "194   -1\n",
+              "Name: Gender, Length: 195, dtype: int8"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Gender</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>190</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>191</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>192</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>193</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>194</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>195 rows × 1 columns</p>\n",
+              "</div><br><label><b>dtype:</b> int8</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "median_index=data['Gender'].median()\n",
+        "data['Gender'].fillna(median_index,inplace=True)\n",
+        "#display the output\n",
+        "data['Gender']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 458
+        },
+        "id": "o0vGgLlQTjjS",
+        "outputId": "86c3f102-9f8e-4383-b194-aecb64e61f49"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0     -1\n",
+              "1     -1\n",
+              "2     -1\n",
+              "3     -1\n",
+              "4     -1\n",
+              "      ..\n",
+              "190   -1\n",
+              "191   -1\n",
+              "192   -1\n",
+              "193   -1\n",
+              "194   -1\n",
+              "Name: Gender, Length: 195, dtype: int8"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Gender</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>190</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>191</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>192</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>193</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>194</th>\n",
+              "      <td>-1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>195 rows × 1 columns</p>\n",
+              "</div><br><label><b>dtype:</b> int8</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
     }
   ]
 }
